apps/base/trinityid/privacyidea/05-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: privacyidea-postgres
  namespace: trinityid
  labels:
    app: privacyidea-postgres
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: postgres
    protocol: TCP
    name: postgres
  selector:
    app: privacyidea-postgres
