apps/base/trinityid/privacyidea/09-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: privacyidea
  namespace: trinityid
  labels:
    app: privacyidea
spec:
  type: ClusterIP
  ports:
  - port: 443
    targetPort: https
    protocol: TCP
    name: https
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: privacyidea
