apps/base/trinityid/privacyidea/patch-annotations.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: privacyidea
  annotations:
    app.kubernetes.io/managed-by: kustomize

---
apiVersion: v1
kind: Service
metadata:
  name: privacyidea
  annotations:
    app.kubernetes.io/managed-by: kustomize
