apps/base/trinityid/privacyidea/patch-labels.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: privacyidea
  labels:
    app.kubernetes.io/name: privacyidea
    app.kubernetes.io/component: identity-management
    app.kubernetes.io/part-of: trinityid

---
apiVersion: v1
kind: Service
metadata:
  name: privacyidea
  labels:
    app.kubernetes.io/name: privacyidea
    app.kubernetes.io/component: identity-management
    app.kubernetes.io/part-of: trinityid
